// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Answer Editor should render Checkbox 1`] = `
<div>
  <MultipleChoiceAnswer
    answer={
      Object {
        "description": "",
        "id": 1,
        "options": Array [
          Object {
            "description": "",
            "id": 1,
            "label": "",
          },
        ],
        "title": "",
        "type": "Checkbox",
      }
    }
    minOptions={1}
    onAddOption={[Function]}
    onChange={[Function]}
    onDeleteAnswer={[Function]}
    onDeleteOption={[Function]}
    onUpdate={[Function]}
    onUpdateOption={[Function]}
    type="Checkbox"
  />
  <Tooltip
    content="Delete answer"
  >
    <AnswerEditor__AnswerDeleteButton
      aria-label="Delete answer"
      onClick={[Function]}
    />
  </Tooltip>
</div>
`;

exports[`Answer Editor should render Number 1`] = `
<div>
  <NumberAnswer
    answer={
      Object {
        "description": "",
        "id": 1,
        "title": "",
        "type": "Integer",
      }
    }
    onAddOption={[Function]}
    onChange={[Function]}
    onDeleteAnswer={[Function]}
    onDeleteOption={[Function]}
    onUpdate={[Function]}
    onUpdateOption={[Function]}
  />
  <Tooltip
    content="Delete answer"
  >
    <AnswerEditor__AnswerDeleteButton
      aria-label="Delete answer"
      onClick={[Function]}
    />
  </Tooltip>
</div>
`;

exports[`Answer Editor should render Radio 1`] = `
<div>
  <MultipleChoiceAnswer
    answer={
      Object {
        "description": "",
        "id": 1,
        "options": Array [
          Object {
            "description": "",
            "id": 1,
            "label": "",
          },
        ],
        "title": "",
        "type": "Radio",
      }
    }
    minOptions={2}
    onAddOption={[Function]}
    onChange={[Function]}
    onDeleteAnswer={[Function]}
    onDeleteOption={[Function]}
    onUpdate={[Function]}
    onUpdateOption={[Function]}
    type="Radio"
  />
  <Tooltip
    content="Delete answer"
  >
    <AnswerEditor__AnswerDeleteButton
      aria-label="Delete answer"
      onClick={[Function]}
    />
  </Tooltip>
</div>
`;

exports[`Answer Editor should render TextField 1`] = `
<div>
  <TextAnswer
    answer={
      Object {
        "description": "",
        "id": 1,
        "title": "",
        "type": "TextField",
      }
    }
    onAddOption={[Function]}
    onChange={[Function]}
    onDeleteAnswer={[Function]}
    onDeleteOption={[Function]}
    onUpdate={[Function]}
    onUpdateOption={[Function]}
  />
  <Tooltip
    content="Delete answer"
  >
    <AnswerEditor__AnswerDeleteButton
      aria-label="Delete answer"
      onClick={[Function]}
    />
  </Tooltip>
</div>
`;
